[gd_scene load_steps=16 format=3 uid="uid://del6455x1rio1"]

[ext_resource type="Script" uid="uid://bvm0v3l1xnpb3" path="res://3D/components/board/building_hotspot.gd" id="1_ql0ga"]
[ext_resource type="ArrayMesh" uid="uid://bnfp303j1sfam" path="res://imports/blend_files/castle_mesh.res" id="2_ih3xl"]
[ext_resource type="Material" uid="uid://cpvde0u8isi5h" path="res://3D/shaders/hologram_material.tres" id="3_ih3xl"]
[ext_resource type="ArrayMesh" uid="uid://dxuw2kp4h3qam" path="res://3D/assets/settlement_v1.obj" id="4_h0n0c"]
[ext_resource type="Texture2D" uid="uid://k5vyxm71n418" path="res://3D/materials/hexagons_medieval.png" id="5_k5n1g"]
[ext_resource type="Material" uid="uid://db6xyoo8kvsrv" path="res://3D/materials/red.tres" id="6_qiwfx"]
[ext_resource type="Material" uid="uid://bogtx2h5cdnp3" path="res://3D/materials/dark_grey.tres" id="7_a37iu"]
[ext_resource type="ArrayMesh" uid="uid://bf7klgr6mjhtv" path="res://imports/vox_files/arrow.vox" id="9_ysheu"]
[ext_resource type="Material" uid="uid://bhs52l6pfbpg7" path="res://3D/materials/green.tres" id="10_1lbr5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8sy7l"]
radius = 3.56683

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3lwb"]
albedo_texture = ExtResource("5_k5n1g")

[sub_resource type="Animation" id="Animation_1lbr5"]
resource_name = "hover"
length = 2.0
loop_mode = 2
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverArrow:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 1, -0.00243711, 4, -1, 0.00554609, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="Animation" id="Animation_bsjyh"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HoverArrow:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4.53959, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_doumi"]
_data = {
&"RESET": SubResource("Animation_bsjyh"),
&"hover": SubResource("Animation_1lbr5")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_bpe7p"]
radius = 11.0

[node name="BuildingHotspot" type="Area3D" node_paths=PackedStringArray("settlement_holo", "settlement_mesh", "castle_holo", "castle_mesh", "hover_arrow", "neighbor_area", "animator") groups=["Empty", "Hotspot"]]
script = ExtResource("1_ql0ga")
settlement_holo = NodePath("SettlementHolo")
settlement_mesh = NodePath("Settlement")
castle_holo = NodePath("CastleHolo")
castle_mesh = NodePath("Castle")
hover_arrow = NodePath("HoverArrow")
neighbor_area = NodePath("NeighborArea")
animator = NodePath("AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81646, 0)
shape = SubResource("SphereShape3D_8sy7l")
debug_color = Color(0, 0.717647, 0.705882, 1)

[node name="SettlementHolo" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false
mesh = ExtResource("4_h0n0c")
surface_material_override/0 = ExtResource("3_ih3xl")
surface_material_override/1 = ExtResource("3_ih3xl")

[node name="CastleHolo" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0468575, 0, 0.105145)
visible = false
mesh = ExtResource("2_ih3xl")
surface_material_override/0 = ExtResource("3_ih3xl")
surface_material_override/1 = ExtResource("3_ih3xl")

[node name="Settlement" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false
mesh = ExtResource("4_h0n0c")
surface_material_override/0 = SubResource("StandardMaterial3D_r3lwb")
surface_material_override/1 = ExtResource("6_qiwfx")

[node name="Castle" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0468575, 0, 0.105145)
visible = false
mesh = ExtResource("2_ih3xl")
surface_material_override/0 = ExtResource("7_a37iu")
surface_material_override/1 = ExtResource("6_qiwfx")

[node name="HoverArrow" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 4.53959, 0)
mesh = ExtResource("9_ysheu")
surface_material_override/0 = ExtResource("10_1lbr5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_doumi")
}

[node name="NeighborArea" type="Area3D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="NeighborArea"]
shape = SubResource("SphereShape3D_bpe7p")
debug_color = Color(1, 0.137255, 0.411765, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="NeighborArea" to="." method="_on_neighbor_area_area_entered"]
